fix(tabs): fix container alignment

--- a/packages/ui-core/src/components/Tabs/Tabs.less
+++ b/packages/ui-core/src/components/Tabs/Tabs.less
@@ -12,8 +12,14 @@
         width: 100%;
     }
 
+    &__wrapper {
+        display: flex;
+        justify-content: center;
+    }
+
     &__swiper-wrapper {
         display: flex;
+        width: 100%;
     }
 
     &__swiper {
